  * debian/control: Change Priority: to extra.
  * debian/control: Add field Provides: ${haskell:Provides} to -dev and
    -prof packages.
  * Update Uploader e-mail.
  * debian/control: Use Vcs-Browser: field.
  * debian/control: Remove haddock from Build-Depends:, since it's now a
    Depends: of haskell-devscripts.
  * debian/control: Bump Standards-Version: to 3.8.4, no changes needed.

 -- Marco Túlio Gontijo e Silva <marcot@debian.org>  Tue, 02 Feb 2010 20:30:46 -0200

gtk2hs (0.10.1-3) unstable; urgency=low

  * debian/control: Specify supported architectures in gio and
    gtksourceview2. (Closes: #540879)

 -- Marco Túlio Gontijo e Silva <marcot@riseup.net>  Sun, 18 Oct 2009 16:41:22 -0200

gtk2hs (0.10.1-2) unstable; urgency=low

  * debian/rules: Add missing files to clean.
  * debian/control: Fix "FTBFS with default automake" by using
    Build-Depends: automake1.10.  (Closes: #542121)
  * debian/control: Use Debian Haskell Group as Maintainer.
  * Update Uploader e-mail.
  * debian/control: Update Vcs-Darcs to Debian Haskell Group darcs
    repository.
  * debian/control: Split lists in more than one line.
  * debian/control: Use Standards-Version: 3.8.3.
  * Create debian/README.source.
  * debian/watch: Correct format.

 -- Marco Túlio Gontijo e Silva <marcot@riseup.net>  Sun, 30 Aug 2009 13:01:28 -0300

gtk2hs (0.10.1-1) unstable; urgency=low

  * Removes restriction of reponse values.  Closes: #522481.
  * New upstream version.
  * Use maintainer scripts similar to the scripts from
    haskell-devscripts.
  * Use set -e instead of #!/bin/sh -e in maintainer scripts.
  * Use correct DEB_HADDOCK_DIR.
  * Use dh_haskell_shlibdeps.
  * debian/rules:
    - Use stamp for .PHONY targets.
    - Use variable instead of target for pkgmeta.
    - Use := only when it makes sense.
    - Support for parallel in DEB_BUILD_OPTIONS, conforming to Debian
      Policy 4.9.1.
    - Configure ghc flags in DEB_BUILD_OPTIONS noopt.