@@ -1,1 +1,0 @@
-See /usr/share/doc/dpatch/README.source.gz
