@@ -21,7 +21,6 @@ Build-Depends: debhelper (>= 5)
   , libgtkglext1-dev
   , libgtksourceview2.0-dev
   , dctrl-tools
-  , dpatch
 Standards-Version: 3.8.4
 Homepage: http://haskell.org/gtk2hs/
 Vcs-Darcs: http://darcs.debian.org/pkg-haskell/gtk2hs
