@@ -13,6 +13,7 @@ gtk2hs (0.10.1-4) UNRELEASED; urgency=low
   * debian/control: Remove haddock from Build-Depends:, since it's now a
     Depends: of haskell-devscripts.
   * debian/control: Bump Standards-Version: to 3.8.4, no changes needed.
+  * Use 3.0 (quilt) source format.
 
  -- Marco Túlio Gontijo e Silva <marcot@debian.org>  Tue, 02 Feb 2010 20:30:46 -0200
 
